--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <Div>
+    <h1>{DEVIN MOORE}</h1>
     <h1>I'm a <span id="age"></span> year-old developer</h1>
     <p>Portfolio Coming Soon!</p>
     </Div>
