--- a/index.html
+++ b/index.html
@@ -6,18 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Devin Moore</title>
     <link rel="stylesheet" href="style.css">
+
+
+
+
 </head>
 <body>
     <Div>
-    <h1>{DEVIN MOORE}</h1>
+
+    <h1 id="intro">{ }</h1>
     <h1>I'm a <span id="age"></span> year-old developer</h1>
     <p>Portfolio Coming Soon!</p>
     </Div>
+
+    
 
 <footer>
     <h4> Made By Devin &#10084</h4>
 </footer>
 
+<script src="intro.js"></script>
 <script src="age.js"></script>
 </body>
 </html>
