--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <Div>
 
     <h1 id="intro">{ }</h1>
-    <h1>I'm a <span id="age"></span> year-old e-commerce entrepreneur and developer</h1>
+    <h1>I'm a <span id="age"></span> year-old <br> 
+        e-commerce entrepreneur and developer</h1>
     <p>Portfolio Coming Soon!</p>
     </Div>
 
