--- a/Projects/index.html
+++ b/Projects/index.html
@@ -20,6 +20,7 @@
         <h1>WELCOME TO THE<br> <span class="name" id="intro">{ }</span> HUB.</h1>
 
         <p class="doc">I'm a 21 year-old <span class="span"> developer</span> and <span class="span">e-commerce entrepreneur.</span></p>
+        <p class='doc'>Still building site. Portfolio Coming Soon!</p>
         <a href="#section1" class="scroll"><p>Click a <span class="span">link</span> or have a scroll</p>
         <p>↓</p>
         </a>
