--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <section class="div div1" >
         <div class="socials">
-       <span><a href="https://github.com/DevinSocial" target="_blank"><i class="fa-brands fa-github"></i></a><a href="https://www.linkedin.com/in/devinsocial/"target="_blank"><i class="fa-brands fa-linkedin"></i></a><a href="https://twitter.com/devinsocial" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+       <span><a href="https://github.com/DevinSocial" target="_blank"><i class="fa-brands fa-github"></i></a><a href="https://www.linkedin.com/in/devinsocial/"target="_blank"><i class="fa-brands fa-linkedin"></i></a><a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
     </div>
         <h1>WELCOME TO THE<br> <span class="name" id="intro">{ }</span> HUB.</h1>
 
